[gd_scene load_steps=13 format=3 uid="uid://cp76wk0hhmwag"]

[ext_resource type="LabelSettings" uid="uid://csrb5ilr7y6dy" path="res://resources/main_menu_title_label_setting.tres" id="1_c4tx6"]
[ext_resource type="Script" path="res://scripts/credits.gd" id="1_o3suw"]
[ext_resource type="FontFile" uid="uid://btvwq11pvkgw7" path="res://assets/fonts/minimal5x7.ttf" id="2_5ad5r"]
[ext_resource type="FontFile" uid="uid://c1gg0yw02pyb5" path="res://assets/fonts/dogicapixel.ttf" id="3_6rbj4"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="4_3veic"]
[ext_resource type="FontFile" uid="uid://csfgtka180pkw" path="res://assets/fonts/dogicapixelbold.ttf" id="4_f8v2u"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="5_7nd3c"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="6_3f04u"]
[ext_resource type="Texture2D" uid="uid://qbxjx8w8ke10" path="res://assets/sprites/twitter.png" id="7_5hy4m"]
[ext_resource type="Texture2D" uid="uid://byerhmo73ar7s" path="res://assets/sprites/itchio.png" id="8_0bwxl"]
[ext_resource type="Texture2D" uid="uid://bfsncibogmah4" path="res://assets/sprites/web.png" id="9_g2a5j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hugtt"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.384314, 0.486275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="credits" type="Node2D"]
script = ExtResource("1_o3suw")

[node name="background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0.894118, 0.796078, 1)

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 320.0
offset_bottom = 180.0

[node name="topMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="title" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Credits"
label_settings = ExtResource("1_c4tx6")
horizontal_alignment = 1

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="leftMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="creditsContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="creditsText" type="RichTextLabel" parent="menuContainer/optionsContainer/creditsContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 4
theme_override_fonts/normal_font = ExtResource("3_6rbj4")
theme_override_fonts/bold_font = ExtResource("4_f8v2u")
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
bbcode_enabled = true
text = "[center][b]Design & programming[/b]:

Jynus

 * Made with Godot 4 in 48 hours for the Game Jam *

[/center]"

[node name="socialButtonContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="twitterButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("7_5hy4m")
icon_alignment = 1

[node name="itchioButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("8_0bwxl")
icon_alignment = 1

[node name="webButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("9_g2a5j")
icon_alignment = 1

[node name="rightMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="doneButton" type="Button" parent="menuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
text = "Done"

[node name="bottomMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/twitterButton" to="." method="_on_twitter_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/itchioButton" to="." method="_on_itchio_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/webButton" to="." method="_on_web_button_pressed"]
[connection signal="pressed" from="menuContainer/doneButton" to="." method="_on_done_button_pressed"]
